county commissioner race updates

--- a/child_pages/cc-elections/Candidates/albrecht.html
+++ b/child_pages/cc-elections/Candidates/albrecht.html
@@ -149,59 +149,40 @@
               <h6 class="page-title">Douglas Albrecht</h6>
               <p>          
 
-                Douglas Albrecht is a two-term incumbent seeking a third term on the Cumberland County Board of Commissioners. He’s an active, visible figure in local politics, 
-                regularly attending Republican breakfasts, participating in county events, and co-hosting a weekly radio show. His biography on the Republican Party’s website 
-                identifies key issues he’s involved with—such as public health, literacy, income inequality, taxation, tourism, and infrastructure projects like the county park system.
-                <br>
-                <br>
-                Unlike some candidates who remain largely invisible, Albrecht is clearly engaged. He mentions real problems and references specific efforts he’s been involved in, 
-                giving voters the impression that he has his finger on the pulse of county concerns. But despite this, his messaging stops short of full transparency.
-                <br>
-                <br>
-                His current communications are spread across scattered formats—radio segments, public bios, and in-person comments at GOP events. There’s no comprehensive, easily 
-                accessible platform where voters can review his stances, see his legislative priorities, or understand how his proposals compare with those of his opponents.
-                <br>
-                <br>
+                Douglas Albrecht is a two-term incumbent seeking a third term on the Cumberland County Board of Commissioners. He remains highly visible—attending GOP breakfasts, 
+                engaging at county events, and co-hosting a weekly radio show. His Republican Party bio mentions involvement in issues like public health, literacy, income inequality, 
+                taxation, and tourism, as well as infrastructure projects like the county park system.
+                <br><br>
+                Later today, we’ll have a chance to speak with Albrecht in a radio interview—our first opportunity for direct, extended discussion to clarify his campaign messaging. 
+                This is a positive step, though one limited by the format and timing.
+                <br><br>
+                Albrecht stands apart from less engaged candidates through his regular presence and willingness to acknowledge real problems. However, his messaging remains scattered 
+                across events, bios, and radio appearances. Voters still lack a single, organized platform to review his priorities or compare them with his opponents.
+                <br><br>
                 For example:
-                <ul>
-                    <li>He identifies persistent problems like poor health and low literacy, but doesn’t explain whether conditions have improved during his tenure or what concrete 
-                        next steps he supports.
-                    </li>
-
-                    <li>He points to issues like tax burden, election costs, and NJDEP constraints, but doesn’t offer forward-looking solutions or acknowledge tradeoffs.
-                    </li>
-
-                    <li>He celebrates progress like the library renovation and county park momentum, but doesn’t provide context for why these projects were prioritized or how 
-                        they’re being evaluated—especially when some critics have questioned their fiscal impact.
-                    </li>
+                <br>
+                <ul> 
+                    <li>He names issues like low literacy and poor health but doesn’t clearly track progress or outline next steps.</li> 
+                    <br>
+                    <li>He critiques state constraints and tax burdens but rarely explains proposed solutions or tradeoffs.</li> 
+                    <br>
+                    <li>He highlights successes like the library and county park—but doesn’t explain the selection process or fiscal oversight behind them.</li> 
                 </ul>
-
+                <br><br>
+                To shift from "visible" to "transparent," Albrecht could:
                 <br>
-                <br>
-
-                To move from “generally visible” to “fully transparent,” the solution is within easy reach:
-                <ul>
-                    <li>A centralized website with clear issue positions and project updates.
-                    </li>
-
-                    <li>Podcast-style interviews where voters can hear him speak in-depth on priorities.
-                    </li>
-
-                    <li>Participation in nonpartisan candidate forums to allow for side-by-side comparison.
-                    </li>
+                <ul> 
+                    <li>Create a centralized site with clear issue positions and project updates.</li> 
+                    <br>
+                    <li>Do long-form interviews that allow for detailed voter understanding.</li> 
+                    <br>
+                    <li>Participate in nonpartisan forums for side-by-side comparisons.</li> 
                 </ul>
-
-                <br>
-                <br>
-
-                As a long-serving commissioner who is regularly in the room where decisions are made, Albrecht has the experience and access to articulate a complete case for 
-                reelection—but that case should be laid out comprehensively in a centralized location like a website that meets modern voters expectations.
-
-                <br>
-                <br>
-
-                For these reasons, Albrecht currently receives an “average to above average” transparency rating—with the understanding that a few focused improvements could put him 
-                in the top tier of voter accessibility and accountability.
+                <br><br>
+                Given his access, experience, and community presence, Albrecht is well-positioned to not only offer a fully informed reelection case, he is uniquely positioned to help 
+                inform the public at large what is going on in county-level politics because it is our understanding that he is the longest servince commissioner. That knowledge could help 
+                voters cut through potential noise and help make meaningfully informed voting choices. 
+                At present, he receives an “average to above average” transparency rating, with the potential to reach the top tier through a few targeted improvements.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -264,7 +245,7 @@
      <div class="candidate-pic-box">
          <img class="cover" src="../../../assets/candidates/albrecht.jpg" class="candidate-pic">
          <div class="candidate-pic-box-content">
-             <h4 class="sub-heading">Websites</h4>
+             <h4 class="sub-heading" style="text-align: center;">Websites</h4>
              <div class="website">
                  
                 <a href="https://www.ccrrogop.org/cumberlandcountycommissioners" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Party Site</button></a>
@@ -296,10 +277,10 @@
      </div>
 
      <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Average</h4>
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Average to Above Average</h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
-        <img class="gauge" src="../../../assets/gauge_dead_center.svg" alt="">
+        <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
         <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
     </div> 
 
@@ -308,25 +289,6 @@
     
      <details>
         <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Events</summary>
-        <div class="event-card">
-            <ul class="event-info">
-                <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
-                <li class="description">Listen to party messaging and potentially meet Republican candidates<a href="https://www.ccrrogop.org/event-calendar"> Party Site</a></li>
-                <li class="date-and-time">04/26/25 - 8:30am</li>
-                <li class="location">Mauricetown Fire Company, 9544 Noble St. Mauricetown, NJ 08349</li>
-                <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
-            </ul>
-        </div>    
-
-        <div class="event-card">
-            <ul class="event-info">
-                <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
-                <li class="description">Listen to party messaging and potentially meet Republican candidates<a href="https://www.ccrrogop.org/event-calendar"> Party Site</a></li>
-                <li class="date-and-time">05/10/25 - 8:30am</li>
-                <li class="location">Eastlyn Golf Course, 4049 Italia Ave, Vineland, NJ, 08361</li>
-                <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
-            </ul>
-        </div>  
 
         <div class="event-card">
             <ul class="event-info">
