--- a/child_pages/cc-elections/county_commissioners_transparency_chart.html
+++ b/child_pages/cc-elections/county_commissioners_transparency_chart.html
@@ -187,41 +187,35 @@
     <div class="comparison-wrapper">
         <h2>Quick Transparency Breakdown</h2>
         <div class="summary-note">
-          <p>
-            Two seats are open on the Cumberland County Board of Commissioners. While Republican incumbents Doug Albrecht and Victoria Lods are running unopposed in the primary, 
-            they continue to benefit from regular public visibility through bi-weekly GOP breakfasts. This visibility, combined with years of incumbency, gives them an advantage—not 
-            just in name recognition but in familiarity with ongoing county issues. However, we've come to know that there are many layers of depth regarding county politics that ought 
-            to be reflected in their overall campaign. Albrecht has expressed interest in an interview and invited us to his radio show, but has not confirmed by email—a small oversight 
-            that complicates coordination and indirectly created a scheduling conflict with LaRae Smith’s confirmed interview. Commissioner Lods has not responded to outreach attempts.
-          </p>
-          <br>
-          <br>
-          <p>
-            On the Democratic side, the three candidates—John Capizola, Yolanda Balicki, and LaRae Smith—are in various stages of visibility. Capizola and Balicki initially agreed to 
-            complete a questionnaire and participate in an interview, but have yet to follow through. Smith, on the other hand, has released a platform, presented her agenda, and 
-            completed a campaign interview. Her trajectory shows meaningful progress, even as she remains unaffiliated with the local party’s limited digital infrastructure.
-          </p>
-          <br>
-          <br>
-          <p>
-            It’s important to note that the Cumberland County Democratic Party has yet to publish any 2025 event listings for their endorsed candidates—let alone challengers like 
-            Smith. This lack of public coordination not only weakens the overall field’s accessibility, but also risks leaving voters uninformed just weeks before the primary. 
-            Regardless of affiliation, basic campaign materials and outreach should be readily available in 2025—not difficult to track down.
-          </p>
-          <br>
-          <br>
-          <p>
-            As a reminder, our outreach process includes mailed letters and emails sent to candidate-provided addresses through the County Clerk, regular attendance at campaign 
-            events and political meetings, online searches for each candidate, and ongoing efforts to encourage transparency at the county level. We have also urged state lawmakers 
-            to reform election law to require counties to centralize and distribute this kind of voter information themselves.
-          </p>
+          Two seats are open on the Cumberland County Board of Commissioners. While Republican incumbents Doug Albrecht and Victoria Lods are running unopposed in the primary, 
+          they continue to benefit from regular public visibility through bi-weekly GOP breakfasts. This visibility, paired with their incumbency, gives them an edge—not just in name 
+          recognition but in familiarity with ongoing county issues. However, as we’ve learned over two years of pursuing comprehensive campaign coverage, there are many underexplored 
+          layers in county governance that deserve more clarity during election season.
+          <br><br>
+          Later today, we are scheduled to participate in a radio interview with Commissioner Albrecht, and potentially with Commissioner Lods, though her participation has not yet 
+          been confirmed. While this is a welcome step toward transparency, the limited one-hour format and uncertainty around Lods’ attendance complicate our ability to prepare 
+          effectively or ask in-depth follow-ups. Given the scarcity of prior access and the significance of this race, this may well be the only opportunity to directly engage both 
+          incumbents in a meaningful conversation about their campaign messaging.
+          <br><br>
+          On the Democratic side, the three candidates—John Capizola, Yolanda Balicki, and LaRae Smith—are in various stages of engagement. Capizola and Balicki initially agreed to 
+          complete a questionnaire and sit for an interview, but have yet to follow through. In contrast, Smith has released a clear platform, participated in a full interview, 
+          and demonstrated continued commitment to transparency, despite being unaffiliated with the local party’s limited digital infrastructure.
+          <br><br>
+          Notably, the Cumberland County Democratic Party has yet to post any 2025 event listings or candidate visibility efforts online—not even for their endorsed slate. This lack 
+          of coordination risks leaving voters in the dark just weeks before the primary. Regardless of party affiliation, basic campaign information should be easy to find in 
+          2025—not hidden behind inconsistent communication or outdated outreach practices.
+          <br><br>
+          As a reminder, our outreach process includes mailed letters and emails sent to candidate-provided addresses through the County Clerk, regular attendance at campaign 
+          events and political meetings, online searches for each candidate, and ongoing efforts to encourage transparency at the county level. We have also urged state lawmakers 
+          to reform election law to require counties to centralize and distribute this kind of voter information themselves.
+          </div>
           
           <!-- Candidate Cards Start -->
           
           <div class="candidate-card">
             <h3>Douglas Albrecht</h3>
             <span class="label">Public Platform:</span><span class="value">⚠️ Party site general messaging, no full platform</span>
-            <span class="label">Response to Outreach:</span><span class="value">⚠️ Invited us to radio show, no email confirmation</span>
+            <span class="label">Response to Outreach:</span><span class="value">✅ One hour interview later today, 5/12/2025</span>
             <span class="label">Voter Info Participation:</span><span class="value">⚠️ Brief messaging at breakfasts, no comprehensive summary</span>
             <span class="label">Public Appearances:</span><span class="value">✅ Regular at GOP breakfasts</span>
             <span class="label">Local Issue Messaging:</span><span class="value">⚠️ Occasionally discussed at events, not centralized or documented</span>
