albrecht page update

--- a/child_pages/cc-elections/Candidates/albrecht.html
+++ b/child_pages/cc-elections/Candidates/albrecht.html
@@ -133,7 +133,8 @@
                 2025 race. Despite his visibility, voters without direct access to local events may struggle to clearly understand his full platform or how it compares to his opponents.
                 <br>
                 <br>
-                As it stands, Albrecht is more accessible than most—but still leaves room for improvement when it comes to transparency in the digital space.
+                As it stands, Albrecht is more accessible than most—but still leaves room for improvement when it comes to transparency in the digital space. He appears to have a wealth of 
+                knowledge, it would be nice to have it comprehensively laid out.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -150,39 +151,19 @@
               <p>          
 
                 Douglas Albrecht is a two-term incumbent seeking a third term on the Cumberland County Board of Commissioners. He remains highly visible—attending GOP breakfasts, 
-                engaging at county events, and co-hosting a weekly radio show. His Republican Party bio mentions involvement in issues like public health, literacy, income inequality, 
+                engaging at county events, and hosting a weekly radio show. His Republican Party bio mentions involvement in issues like public health, literacy, income inequality, 
                 taxation, and tourism, as well as infrastructure projects like the county park system.
                 <br><br>
-                Later today, we’ll have a chance to speak with Albrecht in a radio interview—our first opportunity for direct, extended discussion to clarify his campaign messaging. 
-                This is a positive step, though one limited by the format and timing.
+                On Monday 5/10, we did a radio interview on his weekly show to have an extended discussion to clarify his campaign messaging. 
+                This is a significant positive step, though one limited by the format and timing.
                 <br><br>
-                Albrecht stands apart from less engaged candidates through his regular presence and willingness to acknowledge real problems. However, his messaging remains scattered 
-                across events, bios, and radio appearances. Voters still lack a single, organized platform to review his priorities or compare them with his opponents.
-                <br><br>
-                For example:
-                <br>
-                <ul> 
-                    <li>He names issues like low literacy and poor health but doesn’t clearly track progress or outline next steps.</li> 
-                    <br>
-                    <li>He critiques state constraints and tax burdens but rarely explains proposed solutions or tradeoffs.</li> 
-                    <br>
-                    <li>He highlights successes like the library and county park—but doesn’t explain the selection process or fiscal oversight behind them.</li> 
-                </ul>
-                <br><br>
-                To shift from "visible" to "transparent," Albrecht could:
-                <br>
-                <ul> 
-                    <li>Create a centralized site with clear issue positions and project updates.</li> 
-                    <br>
-                    <li>Do long-form interviews that allow for detailed voter understanding.</li> 
-                    <br>
-                    <li>Participate in nonpartisan forums for side-by-side comparisons.</li> 
-                </ul>
+                Albrecht stands apart from less engaged candidates through his regular presence and willingness to acknowledge real problems. 
                 <br><br>
                 Given his access, experience, and community presence, Albrecht is well-positioned to not only offer a fully informed reelection case, he is uniquely positioned to help 
-                inform the public at large what is going on in county-level politics because it is our understanding that he is the longest servince commissioner. That knowledge could help 
+                inform the public at large what is going on in county-level politics because it is our understanding that he is the longest serving commissioner. That knowledge could help 
                 voters cut through potential noise and help make meaningfully informed voting choices. 
-                At present, he receives an “average to above average” transparency rating, with the potential to reach the top tier through a few targeted improvements.
+                At present, he receives an “average to above average” transparency rating, with the potential to reach the top tier by simply putting the extent of his knowledge out there 
+                so the county can clearly look it over when the general election comes in November.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -275,6 +256,18 @@
              </div>
          </div>
      </div>
+
+     <br>
+     <br>
+
+     <div class="video-box-modal can-sec">
+        <h3 class="video-heading">2025 InformTheVoteNJ Interview With Douglas Albrecht</h3>
+
+        <iframe src="https://www.youtube.com/embed/HNDQXLzqYmk?si=auBGzcNqEN4KoQxO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    
+    </div>
+
+    <br>
+    <br>
 
      <div class="gauge-box">
         <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Average to Above Average</h4>
