county commissioners transparency update

--- a/child_pages/cc-elections/county_commissioners_transparency_chart.html
+++ b/child_pages/cc-elections/county_commissioners_transparency_chart.html
@@ -192,10 +192,9 @@
           recognition but in familiarity with ongoing county issues. However, as we’ve learned over two years of pursuing comprehensive campaign coverage, there are many underexplored 
           layers in county governance that deserve more clarity during election season.
           <br><br>
-          Later today, we are scheduled to participate in a radio interview with Commissioner Albrecht, and potentially with Commissioner Lods, though her participation has not yet 
-          been confirmed. While this is a welcome step toward transparency, the limited one-hour format and uncertainty around Lods’ attendance complicate our ability to prepare 
-          effectively or ask in-depth follow-ups. Given the scarcity of prior access and the significance of this race, this may well be the only opportunity to directly engage both 
-          incumbents in a meaningful conversation about their campaign messaging.
+          We recently did a radio interview with Commissioner Albrecht.  While this was certainly a significant step in the right direction, Albrecht is uniquely positioned as the longest 
+          serving commissioner, so he has a wealth of knowledge that could be shared beyond that interview. We hope that Albrecht and Lods continue in the direction of volunteering 
+          comprehensive information so it can be shared in one information hub like this website. It would certainly continue to set them apart from some of their democrat challengers.
           <br><br>
           On the Democratic side, the three candidates—John Capizola, Yolanda Balicki, and LaRae Smith—are in various stages of engagement. Capizola and Balicki initially agreed to 
           complete a questionnaire and sit for an interview, but have yet to follow through. In contrast, Smith has released a clear platform, participated in a full interview, 
@@ -215,10 +214,10 @@
           <div class="candidate-card">
             <h3>Douglas Albrecht</h3>
             <span class="label">Public Platform:</span><span class="value">⚠️ Party site general messaging, no full platform</span>
-            <span class="label">Response to Outreach:</span><span class="value">✅ One hour interview later today, 5/12/2025</span>
-            <span class="label">Voter Info Participation:</span><span class="value">⚠️ Brief messaging at breakfasts, no comprehensive summary</span>
+            <span class="label">Response to Outreach:</span><span class="value">✅ One hour interview completed, 5/12/2025</span>
+            <span class="label">Voter Info Participation:</span><span class="value">✅ Platform clarified during interview, though much more potential exists</span>
             <span class="label">Public Appearances:</span><span class="value">✅ Regular at GOP breakfasts</span>
-            <span class="label">Local Issue Messaging:</span><span class="value">⚠️ Occasionally discussed at events, not centralized or documented</span>
+            <span class="label">Local Issue Messaging:</span><span class="value">✅ Willingness to share high, though there is much more potential</span>
             <div class="rating">Rating: <strong>Average to Above Average</strong></div>
           </div>
           
@@ -227,7 +226,7 @@
             <span class="label">Public Platform:</span><span class="value">⚠️ Party site general messaging, no full platform</span>
             <span class="label">Response to Outreach:</span><span class="value">❌ No response</span>
             <span class="label">Voter Info Participation:</span><span class="value">⚠️ Brief mentions at GOP events, nothing formalized</span>
-            <span class="label">Public Appearances:</span><span class="value">✅ Regular GOP presence</span>
+            <span class="label">Public Appearances:</span><span class="value">✅ Regular GOP presence and facebook presence improving</span>
             <span class="label">Local Issue Messaging:</span><span class="value">⚠️ General party alignment, lacking issue-specific documentation</span>
             <div class="rating">Rating: <strong>Slightly Below Average</strong></div>
           </div>
