larae video details corrected on top banner of homepage

--- a/index.html
+++ b/index.html
@@ -173,9 +173,7 @@
         <div class="modal-content">
           <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id='close1' class="close">
           <h4 class="quick-sum">Larae Smith Interview Summary</h4>
-          <h6 class="page-title">Read to get a quick breakdown of the 45 minute interview.</h6>
-
-          <p>This table highlights the key topics covered in the 45 minute interview, summarizing major takeaways per section.</p>
+          <h6 class="page-title">Read to get a quick breakdown of the 1.5 hour interview.</h6>
 
           <div style="padding: 15px 25px; text-align: left;">
             <p>In this wide-ranging and insightful interview, Larae Smith shares her deep local roots, extensive civic leadership, and motivations for seeking a seat on the Cumberland 
@@ -196,10 +194,9 @@
           <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id='close2' class="close">
             <div class="modal-video-box">
                 <div class="video-box-sm">
-                    <iframe src="https://www.youtube.com/embed/cIOVLB5SKzI?si=nk8DEuMZWk-2LYcV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    <h3 class="video-heading-sm">Pignatelli Interview</h3>
+                    <iframe src="https://www.youtube.com/embed/kEljj_nvLMg?si=KXQT6Wu5-ddtifuY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                    <h3 class="video-heading-sm">Pignatelli Interview</h3>
                     <div class="video-sm-desc">
-                        Watch to meet Sean and get a great overview of his platform.
+                        Watch to meet Larae and get a great overview of her platform.
                     </div>
                 </div>
             </div>
