made new pignatelli section a can-sec

--- a/child_pages/cc-elections/Candidates/pignatelli.html
+++ b/child_pages/cc-elections/Candidates/pignatelli.html
@@ -677,8 +677,8 @@
 
             <br>
             <br>
-            
-            <div class="agenda-item">
+
+            <div class="agenda-item can-sec">
                 <h3>Clarified Positions & Extended Vision</h3>
             
                 <br>
