ld3 transparency update

--- a/child_pages/cc-elections/assembly_ld3_transparency_chart.html
+++ b/child_pages/cc-elections/assembly_ld3_transparency_chart.html
@@ -187,15 +187,14 @@
     <div class="comparison-wrapper">
         <h2>Quick Transparency Breakdown</h2>
         <div class="summary-note">
-            As of now, none of the four candidates for New Jersey’s 3rd Legislative District Assembly race have provided voters with clear, accessible platforms or significant 
-            direct outreach. 
-            <br>
-            <br>
-            Incumbents Heather Simmons and Dave Bailey have some public records and social media presence, but no dedicated campaign messaging. 
-            <br>
-            <br>
-            Republican challengers Chris Konawell and Lawrence Moore also lack any known campaign platforms or voter engagement efforts, aside from minimal public appearances 
-            related to their current offices and an appearance of Moore at a republican breakfast with a brief message about his candidacy.
+          As of now, none of the four candidates for New Jersey’s 3rd Legislative District Assembly race have provided voters with clear, accessible platforms or significant direct outreach.
+          <br><br>
+          Incumbents Heather Simmons and Dave Bailey have some public records and limited social media presence, but no dedicated campaign websites or formal messaging outlining their 
+          legislative agendas.
+          <br><br>
+          Republican challengers Chris Konawel and Lawrence Moore also lack public-facing campaign platforms. However, both have made brief appearances at local Republican events—Moore shared a 
+          short message about his candidacy at a recent GOP breakfast, and Konawel offered a little agenda-related info at another breakfast. While these appearances demonstrate a minimal level 
+          of campaign-related public engagement, neither candidate has participated in broader voter information efforts or released detailed issue messaging.
           
           <br>
           <br>
@@ -228,8 +227,8 @@
             <span class="label">Public Platform:</span><span class="value">❌ None</span>
             <span class="label">Response to Outreach:</span><span class="value">❌ No response</span>
             <span class="label">Voter Info Participation:</span><span class="value">❌ None</span>
-            <span class="label">Public Appearances:</span><span class="value">⚠️ County duties only</span>
-            <span class="label">Local Issue Messaging:</span><span class="value">❌ Not available</span>
+            <span class="label">Public Appearances:</span><span class="value">⚠️ County duties related meetings, one GOP breakfast</span>
+            <span class="label">Local Issue Messaging:</span><span class="value">⚠️ Minimal</span>
             <div class="rating">Rating: <strong>Low</strong></div>
           </div>
         
