--- a/child_pages/cc-elections/state_assembly_legislative_district_3.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_3.html
@@ -127,14 +127,21 @@
           <h6 class="page-title">State Assembly - Legislative District 3</h6>
           <p>
             
-            The General Assembly race for Legislative District 3 has two open seats this year. The democrats are running their 2 incumbents, Heather Simmons and Dave 
-            Bailey, unopposed. We have reached out to them via the information provided to us by the County Clerk (email and snail mail), though we have not received a 
-            response yet.
+            The General Assembly race for New Jersey’s 3rd Legislative District features two open seats this year. On the Democratic side, incumbents Heather Simmons and Dave Bailey 
+            are running unopposed in the primary. We reached out to both candidates using the contact information provided by the County Clerk—via email and physical mail, and also 
+            called their legislative offices, who said they would have the candidates reach out to us—but have not yet received a response. As of now, neither candidate has released 
+            a formal campaign platform.
             <br>
             <br>
-            Similarly, the republicans are running two unopposed candidates in their primary, Lawrence Moore and Chris Konawell. Lawrence Moore did make an appearance at 
-            one of the recent republican breakfasts, but his campaign messaging was a bit brief without many specifics about his vision. We did get a friend request 
-            accepted from Chris Konawell, but we were left 'on read' (no response) when we asked for campaign information.
+            Similarly, the Republican primary is uncontested, with Chris Konawel and Lawrence Moore as the declared candidates. Moore made a brief appearance at a recent Republican 
+            breakfast, where he acknowledged his candidacy but offered limited details about his agenda. Konawel also attended another breakfast and gave a short speech, though 
+            without specific platform messaging. While he accepted our friend request on Facebook, he left our message requesting campaign information “on read”. We also approached 
+            him at the breakfast to make our outreach directly known, though he also has not followed up since. Furthermore, both Moore and Konawell have been left messages at their 
+            respective offices, with no response.
+            <br>
+            <br>
+            All four candidates are expected to advance to the general election, making this a critical time for them to begin clearly communicating their platforms to voters. 
+            We encourage each of them to take advantage of the early window to provide accessible, detailed information about their goals and qualifications.
             <br>
             <br>
             Note: While this is technically still the primary phase, both parties are running unopposed slates, meaning all four current candidates are expected to advance to the general 
